--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -5,11 +5,12 @@
       <div class="greeting">
         <%= "こんにちは、" %>
         <%= link_to "#{current_user.name}さん", user_path(current_user), class: :greeting__link %>
-        <%# <% else %>
-         <%# <div class="grid-6">
+      </div>
+        <% else %>
+         <div class="grid-6">
             <%= link_to "", new_user_session_path, class: "post" %>
-            <%# <%= link_to "", new_user_registration_path, class: "post" %>
-          </div>
+            <%= link_to "", new_user_registration_path, class: "post" %>
+         </div>
         <% end %>
       </div>
     <%# // ログインしているときは上記を表示する %>
