--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -8,6 +8,6 @@
       <%= prototype.catch_copy %>
     </p>
     <%= link_to "by #{prototype.user.name}", user_path(prototype.user), class: :card__user %>
-    <% prototype.user == current_user %>
+    <%# <% prototype.user == current_user %>
   </div>
 </div>
