--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -6,19 +6,18 @@
         <%= "こんにちは、" %>
         <%= link_to "#{current_user.name}さん", user_path(current_user), class: :greeting__link %>
       </div>
-        <% else %>
-         <div class="grid-6">
-            <%= link_to "", new_user_session_path, class: "post" %>
-            <%= link_to "", new_user_registration_path, class: "post" %>
-         </div>
+        <%# <% else %>
+         <%# <div class=""> %>
+            <%# <%= link_to "", new_user_session_path, class: "post" %>
+            <%# <%= link_to "", new_user_registration_path, class: "post" %>
+         <%# </div> %>
         <% end %>
-      </div>
     <%# // ログインしているときは上記を表示する %>
     <div class="card__wrapper">
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
-      <div class="prototypes">
+      <%# <div class="prototypes"> %>
        <%= render partial: 'prototype', collection: @prototypes %>
-      </div>
+      <%# </div> %>
     </div>
   </div>
 </main>
