--- a/app/views/prototypes/new.html.erb
+++ b/app/views/prototypes/new.html.erb
@@ -3,8 +3,8 @@
     <div class="form__wrapper">
       <h2 class="page-heading">新規プロトタイプ投稿</h2>
         <%# 部分テンプレートでフォームを表示する %>
-        <%= render 'prototypes/form'%>
-      <%# <%= render partial: "form", locals: { prototype: @prototype } %>
+        <%# <%= render 'prototypes/form'%>
+      <%= render partial: "form", locals: { prototype: @prototype } %>
     </div>
   </div>
 </div>
