--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -5,14 +5,14 @@
         <%= @prototype.title %>
       </p>
       <%= link_to "by #{@prototype.user.name}", user_path(@prototype.user), class: :prototype__user %>
-      <% if user_signed_in? && current_user.id == @prototype.user_id %>
-      <%# <% if current_user == @prototype.user%>
+      <%# <% if user_signed_in? && current_user.id == @prototype.user_id %>
+      <% if current_user == @prototype.user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
         <div class="prototype__manage">
           <%= link_to "編集する", edit_prototype_path(@prototype), class: :prototype__btn %>
           <%= link_to "削除する", prototype_path(@prototype), method: :delete, class: :prototype__btn %>
-        <% end %>
         </div>
+      <% end %>
       <%# // プロトタイプの投稿者とログインしているユーザーが同じであれば上記を表示する %>
       <div class="prototype__image">
         <%= image_tag @prototype.image %>
@@ -33,7 +33,7 @@
       </div>
       <div class="prototype__comments">
         <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
-        <% if current_user %>
+        <% if user_signed_in? %>
           <%= form_with model: [@prototype, @comment],local: true do |f|%>
             <div class="field">
               <%= f.label :content, "コメント" %><br />
@@ -43,20 +43,19 @@
               <%= f.submit "送信する", class: :form__btn %>
             </div>
            <% end %>
-          <% end %>
+        <% end %>
           <%# // ログインしているユーザーには上記を表示する %>
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
-          <% if @comments %>
+          <%# <% if @comments %>
             <% @comments.each do |comment| %>
             <li class="comments_list">
-            <p>
               <%= comment.content %>
-              <%= link_to "(#{comment.user.name})", user_path(current_user), class: :comment_user %>
-              </p>
-              <% end %>
+              <%# <%= link_to "(#{comment.user.name})", user_path(current_user), class: :comment_user %>
+              <%= link_to "(#{comment.user.name})", user_path(comment.user), class: :comment_user %>
+              <%# <% end %>
+              </li>
             <% end %>
-            </li>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
         </ul>
       </div>
